--- a/Insanity/View/TestResultCell.xib
+++ b/Insanity/View/TestResultCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseTestResultCell" rowHeight="60" id="KGk-i7-Jjw" customClass="TestResultCell" customModule="Insanity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseTestResultCell" rowHeight="61" id="KGk-i7-Jjw" customClass="TestResultCell" customModule="Insanity" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6d-5V-Hl2">
@@ -23,21 +23,24 @@
                                 <rect key="frame" x="20" y="5" width="280" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Switch Kicks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5v-6c-Wh2">
-                                        <rect key="frame" x="0.0" y="11" width="255" height="18"/>
+                                        <rect key="frame" x="20" y="11" width="210" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fE1-ly-jId">
-                                        <rect key="frame" x="255" y="11" width="25" height="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fE1-ly-jId">
+                                        <rect key="frame" x="230" y="11" width="50" height="18"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="25" id="neR-V0-97W"/>
+                                            <constraint firstAttribute="width" constant="50" id="neR-V0-97W"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="l5v-6c-Wh2" firstAttribute="leading" secondItem="Xf5-7t-C6c" secondAttribute="leading" constant="20" id="7nF-SR-lFP"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <constraints>
@@ -61,7 +64,7 @@
                 <outlet property="workoutLabel" destination="l5v-6c-Wh2" id="8sV-rQ-AcK"/>
                 <outlet property="workoutScore" destination="fE1-ly-jId" id="2YP-MP-BxC"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="150"/>
+            <point key="canvasLocation" x="137.68115942028987" y="149.66517857142856"/>
         </tableViewCell>
     </objects>
 </document>
